# react-native-bls-signatures-old

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-bls-signatures.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/blssignatures/: BlsSignaturesModule.java  BlsSignaturesPackage.java
android/src/newarch/: BlsSignaturesSpec.java
android/src/oldarch/: BlsSignaturesSpec.java
bls-signatures-1.0.16/: CMakeLists.txt
cpp/: react-native-bls-signatures.cpp  react-native-bls-signatures.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/blssignaturesexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/blssignaturesexample/: MainActivity.java  MainApplication.java
example/android/app/src/release/java/com/blssignaturesexample/: ReactNativeFlipper.java
example/ios/: Podfile
example/ios/BlsSignaturesExample/: AppDelegate.mm  Info.plist
example/ios/BlsSignaturesExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: BlsSignatures.h  BlsSignatures.mm
ios/BlsSignatures.xcodeproj/: project.pbxproj
src/: NativeBlsSignatures.ts  index.tsx
